--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "bugs": {
     "url": "https://github.com/satyam-ku/Node-JS-Tutorial/issues"
   },
   "homepage": "https://github.com/satyam-ku/Node-JS-Tutorial#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1"
   }
 }
